2006-08-15  Russell Morris  <russell@russellsprojects.com>

	* DontDestroyStackTrace.cs: Fix possible NRE when processing invalid 
	IL. http://blog.russellsprojects.com/?p=3

2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Exceptions.mdp: New. Project file for MonoDevelop.

2006-06-19  Russell Morris  <russell@russellsprojects.com>

	* Initial import of exception-management rule assembly